Bug 128957 - UI Can’t set custom image height/width in PNG Options Window in points
Summary: UI Can’t set custom image height/width in PNG Options Window in points
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords:
: 146975 (view as bug list)
Depends on:
Blocks: File-Export-Dialog
  Show dependency treegraph
 
Reported: 2019-11-22 12:14 UTC by NISZ LibreOffice Team
Modified: 2025-01-01 07:13 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Draw (8.59 KB, application/vnd.oasis.opendocument.graphics)
2019-11-22 12:15 UTC, NISZ LibreOffice Team
Details
Screenshot of the initial window (30.35 KB, image/png)
2019-11-22 12:15 UTC, NISZ LibreOffice Team
Details
Screenshot of the window after trying to set a custom Width in 3.5.0rc3 (30.09 KB, image/png)
2019-11-22 12:15 UTC, NISZ LibreOffice Team
Details
With a new document in 6.3.0 (27.37 KB, image/png)
2019-11-26 12:33 UTC, NISZ LibreOffice Team
Details
confirm it (1.10 MB, video/mp4)
2019-12-13 16:03 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-22 12:14:24 UTC
Description:
When exporting an image from Draw to PNG format it is possible in the PNG Options window to define custom height / width for the target image, measured in various units. 
If points is selected, the contents of the Width/Height spinboxes become 99999.99 and can’t be changed.


Steps to Reproduce:
Steps to reproduce:
1.	Open attached Draw document
2.	Select the circle and go to File – Export. Select PNG format for export.
3.	Enter a filename. The PNG Options window appears.
4.	Select various measurement units and try to set custom Width/Height values.


Actual Results:
The entered value is retained if the measurement unit is inches, cm, mm or pixels, but it becomes 99999.99 if you select points.

Expected Results:
Entered value is retained.


Reproducible: Always


User Profile Reset: No



Additional Info:

LibreOffice details:
Version: 6.5.0.0.alpha0+ (x64)
Build ID: 7e09d08807b5ba2fd8b9831557752a415bdad562
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc: CL

Also happens in: 
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
- Here the appearing value is 999 but otherwise the same behavior.
Comment 1 NISZ LibreOffice Team 2019-11-22 12:15:00 UTC
Created attachment 156041 [details]
Example file from Draw
Comment 2 NISZ LibreOffice Team 2019-11-22 12:15:19 UTC
Created attachment 156042 [details]
Screenshot of the initial window
Comment 3 NISZ LibreOffice Team 2019-11-22 12:15:45 UTC
Created attachment 156043 [details]
Screenshot of the window after trying to set a custom Width in 3.5.0rc3
Comment 4 Xisco Faulí 2019-11-26 11:29:49 UTC
I can't reproduce it in

Version: 6.5.0.0.alpha0+
Build ID: d6e2d624a124454fa4ac80cb30a924571a609101
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

win only ?
Comment 5 Xisco Faulí 2019-11-26 11:31:34 UTC
nor with gen either
Comment 6 Xisco Faulí 2019-11-26 11:32:55 UTC
Also fine in

Versión: 6.3.3.2 (x86)
Id. de compilación: a64200df03143b798afd1ec74a12ab50359878ed
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES
Calc: threaded
Comment 7 Xisco Faulí 2019-11-26 11:33:07 UTC
To be certain the reported issue is not
related to corruption in the user profile, could you please reset your
Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and
re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the issue is still present
Comment 8 NISZ LibreOffice Team 2019-11-26 12:33:41 UTC
Created attachment 156125 [details]
With a new document in 6.3.0

Probably not profile corruption... also happens with other formats like gif and jpeg

Version: 6.3.0.4 (x86)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc: CL
Comment 9 QA Administrators 2019-11-27 03:47:53 UTC Comment hidden (obsolete)
Comment 10 BogdanB 2019-12-13 16:03:24 UTC
Created attachment 156560 [details]
confirm it

I confirm it.
See the video.

Please see if there are some crash report at this hour about my problem. Generated by LO. By Crash Report.
Comment 11 BogdanB 2019-12-13 16:05:45 UTC
My version
Version: 6.5.0.0.alpha0+
Build ID: 693bdcc3a8c4e849c306b0187a5bf8ffe4ddb824
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-12-12_16:14:25
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded
Comment 12 BogdanB 2022-01-24 19:24:55 UTC
*** Bug 146975 has been marked as a duplicate of this bug. ***
Comment 13 Kira Tubo 2023-11-03 05:48:40 UTC
(In reply to BogdanB from comment #10)
> Created attachment 156560 [details]
> confirm it
> 
> I confirm it.
> See the video.
> 
> Please see if there are some crash report at this hour about my problem.
> Generated by LO. By Crash Report.

Crashes are occurring due to Skia (see Bug 135952). If Skia is turned off, this issue is reproducible. Best way to reproduce is: 

Prerequisite: turn off Skia (Tools > Options > LibreOffice > View > Uncheck "Use Skia for all rendering")
1. Open attached Draw document
2. Select the circle and go to File – Export. Select PNG format for export.
3. Enter a filename. The PNG Options window appears.
4. On PNG Options screen, change unit to "points"
5. Change width or height to a small number, like 5. 
6. Press Tab (Result: Width/height changes to an absurdly large number)
7. Press Tab a few times. (Result: Width/height changes to 99999.99)

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 676e0527d2f31556eccae314fbb12ce204f02ec7
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 14 Mike Kaganski 2024-12-24 11:25:26 UTC
In a sense, it's "inherited from AOO". This is an implementation error of commit 333d1e3dcc2e819f8c62c9713cca96fbedaba3de. It is also reproducible in AOO since version 3.4.

Indeed, it's the same for any component, not specific to Draw.

https://gerrit.libreoffice.org/c/core/+/179308
Comment 15 Commit Notification 2024-12-24 15:14:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bb04dcc6050069bd22c2276fec860672bb5aff5e

tdf#128957: fix UpdateHdlMtfSize* handlers in ExportDialog

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2025-01-01 07:13:16 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/686b9e7861ed071740789ca6561b82a14be2761c

tdf#128957: fix UpdateHdlMtfSize* handlers in ExportDialog

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.