tdf#128957: fix UpdateHdlMtfSize* handlers in ExportDialog

Since the introduction of resolution support in the dialog in commit
333d1e3dcc2e819f8c62c9713cca96fbedaba3de (impress186: #i4499# graphic
dialog reorganisation - added support of bitmap resolution, 2010-06-16),
the code handling points was wrong, multiplying by 72, where it needed
to divide. This created an error times 72 * 72 = 5184.

This change uses o3tl::convert for the task.

Change-Id: I096c72422e477d28f08632f8902e31fcbb548c4e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179308
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins